# jcgd

./: Cargo.toml  LICENSE  README.md
src/: cg_download.rs  cg_fetch.rs  cg_info.rs  main.rs
ui/: appwindow.slint
