[package]
name = "jcgd"
version = "0.1.0"
authors = ["jantar1154 <davidbednarek@email.cz>"]
edition = "2021"
build = "build.rs"

[dependencies]
image = "0.25.0"
reqwest = { version = "0.11.27", features = ["blocking", "json"]}
rfd = "0.14.1"
serde_json = "1.0.114"
slint = "1.5.0"

[build-dependencies]
slint-build = "1.5.1"
